--- a/style.css
+++ b/style.css
@@ -18,11 +18,11 @@ body {
 
 /* ANA KAP */
 .container {
-  max-width: 1600px;
+  transition: 0.3s all ease;
+  max-width: 1850px;
   height: 850px;
   margin: 0 auto;
-  background: white;
-  border-radius: 12px;
+  background-color: white;
   box-shadow: 0 4px 20px rgba(0,0,0,0.08);
   padding: 30px;
   text-align: center;
@@ -30,7 +30,7 @@ body {
 
 /* BAŞLIK */
 h1 {
-  color: var(--primary);
+  color: 	black;
   margin-bottom: 30px;
   font-size: 2.4rem;
   font-weight: 700;
@@ -83,6 +83,7 @@ select:focus {
 }
 
 .gezi-karti {
+  
   background: white;
   border-radius: 18px;
   overflow: hidden;
@@ -97,8 +98,8 @@ select:focus {
 }
 
 .gezi-karti img {
-  width: 100%;
-  height: 360px; /* BÜYÜK FOTOĞRAFLAR */
+  width: 95%;
+  height: 340px; /* BÜYÜK FOTOĞRAFLAR */
   object-fit: cover;
   object-position: center;
   border-bottom: 1px solid var(--border);
@@ -197,4 +198,24 @@ body {
     max-width: 100%;
     padding: 12px 15px;
   }
+}
+.darkMode{
+  position: fixed;
+  top: 53rem;
+  left: 3rem;
+  width: 3rem;
+  height: 3rem;
+  background-color: #222831;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
+
+}
+.fa-moon{
+  font-size: 1.5rem;
+  color: white;
+
 }
