--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
 
 /* BAŞLIK */
 h1 {
+  
   color: 	black;
   margin-bottom: 30px;
   font-size: 2.4rem;
@@ -84,7 +85,7 @@ select:focus {
 
 .gezi-karti {
   
-  background: white;
+  background: rgb(231, 227, 213);
   border-radius: 18px;
   overflow: hidden;
   box-shadow: 0 3px 12px rgba(0,0,0,0.1);
@@ -198,24 +199,4 @@ body {
     max-width: 100%;
     padding: 12px 15px;
   }
-}
-.darkMode{
-  position: fixed;
-  top: 53rem;
-  left: 3rem;
-  width: 3rem;
-  height: 3rem;
-  background-color: #222831;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-
-
-}
-.fa-moon{
-  font-size: 1.5rem;
-  color: white;
-
 }
