--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body {
 /* ANA KAP */
 .container {
   transition: 0.3s all ease;
-  max-width: 1850px;
-  height: 850px;
+  max-width: 1860px;
+  height: 860px;
   margin: 0 auto;
   background-color: white;
   box-shadow: 0 4px 20px rgba(0,0,0,0.08);
@@ -32,7 +32,7 @@ body {
 /* BAŞLIK */
 h1 {
   
-  color: 	black;
+  color: 	rgba(0, 0, 0, 0.86);
   margin-bottom: 30px;
   font-size: 2.4rem;
   font-weight: 700;
@@ -59,7 +59,7 @@ select {
   font-size: 1.1rem;
   border: 2px solid var(--border);
   border-radius: 10px;
-  background: white;
+  background: rgba(255, 255, 255, 0.747);
   cursor: pointer;
   transition: all 0.25s;
   margin: 0 auto;
@@ -86,7 +86,7 @@ select:focus {
 
 .gezi-karti {
   
-  background: rgb(231, 227, 213);
+  background: rgb(229, 226, 217);
   border-radius: 18px;
   overflow: hidden;
   box-shadow: 0 3px 12px rgba(0,0,0,0.1);
@@ -117,7 +117,7 @@ select:focus {
 .gezi-karti p {
   padding: 0 20px 18px;
   margin: 0;
-  color: #555;
+  color: #555454;
   line-height: 1.5;
   font-size: 1.1rem;
 }
