--- a/style.css
+++ b/style.css
@@ -206,7 +206,6 @@ body {
   }
 
 }
-/* Geçiş efektleri */
 .fade {
   opacity: 1;
   transition: opacity 0.4s ease;
@@ -217,7 +216,7 @@ body {
   opacity: 0;
   transition: opacity 0.4s ease;
   visibility: hidden;
-  pointer-events: none; /* Böylece tıklanmaz */
+  pointer-events: none; 
 }
 
 .fade-in {
@@ -234,8 +233,7 @@ body {
 }
 #favorilerContainer {
   display: flex;
-   /* Başlık ve kartlar üst hizada */
-  gap: 20px; /* Başlık ile kartlar arası boşluk */
+  gap: 20px; 
   margin-top: 30px;
   flex-direction: column;
   align-items: center;
@@ -250,9 +248,8 @@ body {
 
 #favorilerBtn {
   background: #3498db;
-   display: block;
-  margin-left: auto;
-  margin-right: 10;
+  display: block;
+  margin: 10px auto;
   margin-top: 10px;
   margin-bottom: 10px;
   color: white;
@@ -262,7 +259,6 @@ body {
   border-radius: 10px;
   cursor: pointer;
   font-weight: 600;
-
   transition: all 0.3s;
   box-shadow: 0 4px 10px rgba(52, 152, 219, 0.3);
 }
