--- a/style.css
+++ b/style.css
@@ -32,13 +32,29 @@ body {
 }
 
 /* BAŞLIK */
-h1 {
-  
-  color: 	rgba(0, 0, 0, 0.86);
-  margin-bottom: 30px;
-  font-size: 2.4rem;
-  font-weight: 700;
+h1#siteBaslik {
+  font-size: 3rem;
+  font-weight: 800;
+  color: #2c3e50;
+  text-align: center;
+  margin-bottom: 40px;
+  position: relative;
+  display: inline-block;
+  padding-bottom: 10px;
 }
+
+h1#siteBaslik::after {
+  content: "";
+  width: 60%;
+  height: 4px;
+  background-color: #3498db;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 2px;
+}
+
 
 /* DROPDOWN STİLLERİ */
 .dropdown-group {
@@ -58,7 +74,7 @@ select {
   width: 100%;
   max-width: 300px;
   padding: 10px 18px;
-  font-size: 1.1rem;
+  font-size: 1.1rem;  
   border: 2px solid var(--border);
   border-radius: 10px;
   background: rgba(255, 255, 255, 0.747);
@@ -279,6 +295,8 @@ body {
   padding: 0 20px;
 
 }
+
+
 
 
 
