--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 h1#siteBaslik {
   font-size: 3rem;
   font-weight: 800;
-  color: #2c3e50;
+  color: #75d8ea;
   text-align: center;
   margin-bottom: 40px;
   position: relative;
